degate (0.0.7) unstable; urgency=low

  * Core completely rewritten in C++. The core is now called libdegate.
  * Degate now uses cmake to build the code.
  * Degate now uses a tile based approach to handle large images.
	
 -- Martin Schobert <martin@weltregierung.de>  Sun, 15 Nov 2009 23:42:00 +0100
	
degate (0.0.6) unstable; urgency=low

  * improved grid configuration
  * focus removed from quit button and set to image area
  * improved connection inspector
  * gate list / gate selection: sortable rows, more attributes displayed
  * dedicated toolbar icons added
  * open projects via command line
  * added scaling manager: handle prescaled images (bicubical scaling)
  * template matching: select multiple gates for matching, work on scaled images
  * more API documentation
  * project attributes added: project name and project descr.
  * gates and gate ports can have colors - wires and vias too, but there is no UI
  * handling unregular grids
  * naming gate objects by position
  * precompiler macro fix: improved architecture detection (thanks to mazzoo)
	
 -- Martin Schobert <martin@weltregierung.de>  Wed, 30 Mar 2009 12:00:00 +0100

degate (0.0.5) unstable; urgency=low

  * select gate ports
  * inspect connections
  * join/ unjoin objects
  * several Bugfixes, e.g.
    * Write logic model to temp file first and rename it afterwars. This prevents
      data loss, if writing fails.

 -- Martin Schobert <martin@weltregierung.de>  Wed, 25 Mar 2009 15:07:10 +0100

degate (0.0.4) unstable; urgency=low

  * Template matching improved
  * several Bugfixes

 -- Martin Schobert <martin@weltregierung.de>  Fri, 13 Mar 2009 17:30:23 +0100
	
degate (0.0.3) unstable; urgency=low

  * Problem with shift-release event fixed

 -- Martin Schobert <martin@weltregierung.de>  Sat, 31 Jan 2009 06:23:42 +0100

degate (0.0.2) unstable; urgency=low

  * applied patch from Eric Preston. Code now complies on Feodora10 with newer sigc++22-devel headers
