@@ -3,6 +3,7 @@ degate (0.0.7) unstable; urgency=low
   * Core completely rewritten in C++. The core is now called libdegate.
   * Degate now uses cmake to build the code.
   * Degate now uses a tile based approach to handle large images.
+  * Implemented autosave.
 	
  -- Martin Schobert <martin@weltregierung.de>  Sun, 15 Nov 2009 23:42:00 +0100
 	
